...
    case referencias

    var id: String { rawValue }

    var label: String {
        switch self {
        case .contactos: "Contactos efetuados"
        case .primeirasReunioesMarcadas: "1as reuniões marcadas"
        case .segundasReunioesMarcadas: "2as reuniões marcadas"
        case .terceirasReunioesMarcadas: "3as reuniões marcadas"
        case .primeirasReunioesRealizadas: "1as reuniões realizadas"
        case .segundasReunioesRealizadas: "2as reuniões realizadas"
        case .terceirasReunioesRealizadas: "3as reuniões realizadas"
...
